--- a/src/app/modules/patient/care-provider-card/care-provider-card.component.html
+++ b/src/app/modules/patient/care-provider-card/care-provider-card.component.html
@@ -1,34 +1,90 @@
+
 <smart-card class="care-provider-card">
-  <div content (click)="updateCardZindex(content)" #content>
-    <div *ngIf="!error">
-      <div class="room">
-         {{ 'CAREPROVIDER.ROOM' | translate }} {{patient.room}}
-      </div>
-      <div class="name">
-        {{patient.fullName}}
-      </div>
-      <div class="age">
-        <span *ngIf="patient.birthDate != null && patient.birthDate.dateTime != null">
-          {{getBirthdate() | date:'dd/MM/yyyy'}} - {{getAge()}} {{ 'CAREPROVIDER.YEARS' | translate }}
-        </span>
-      </div>
-      <app-practitioner-chooser fieldTitle="{{ 'CAREPROVIDER.ASSISTANT' | translate }}"
-                                [practitioner]="getAssistantMedic()"
-                                (setPractitioner)="setAssistant($event)"
-                                (remove)="onRemoveAssitant($event)">
-      </app-practitioner-chooser>
-      <app-practitioner-chooser fieldTitle="{{ 'CAREPROVIDER.ASSOCIATED' | translate }}"
-                                [practitioner]="getAssociatedMedic()"
-                                (setPractitioner)="setAssociated($event)"
-                                (remove)="onRemoveAssociated($event)">
-      </app-practitioner-chooser>
-      <div class="loading-overlay" *ngIf="loading">
+  <div content (click)="updateCardZindex(content)" #content class="card-wrapper">
+    <div *ngIf="!error" class="card-checker">
+        <div class="copy-schedule" *ngIf="editable">
+          {{ 'CAREPROVIDER.COPYSCHEDULE' | translate}}
+          <mat-form-field>
+
+            <input matInput [matDatepicker]="myDatepicker"
+                            #inputDate
+                            [matDatepickerFilter]="filterDates"
+                            disabled>
+
+            <div class="calendar" id="copy-calendar-button" (click)="openedDatePicker(inputDate, myDatepicker);"></div>
+
+            <mat-datepicker #myDatepicker
+                            [startAt]="selectedDate"
+                            disabled="false"
+                            (selectedChanged)="getAppointmentsToCopy($event)"></mat-datepicker>
+          </mat-form-field>
+
+          <input class="btn-copy-schedule"
+                 type="button"
+                 (click)="cancelCopy(inputDate, myDatepicker)"
+                 *ngIf="appointmentsBackup != null"
+                 id="cancel-copy-button"
+                 value="voltar">
+
+          <input class="btn-copy-schedule"
+                 type="button"
+                 (click)="saveCopy(inputDate, myDatepicker)"
+                 *ngIf="appointmentsBackup != null"
+                 id="save-copy-button"
+                 value="salvar">
+        </div>
+        <div class="col">
+          <div class="room">
+            {{patient.room}}
+          </div>
+          <div class="name" title="{{patient.fullName}}">
+            <div class="name-content">
+              {{patient.fullName}}
+            </div>
+          </div>
+          <div class="age">
+            <span *ngIf="patient.birthDate != null && patient.birthDate.dateTime != null">
+              {{getBirthdate() | date:'dd/MM/yyyy'}} - {{getAge()}} {{ 'CAREPROVIDER.YEARS' | translate }}
+            </span>
+          </div>
+          <app-practitioner-chooser fieldTitle="{{ 'CAREPROVIDER.ASSISTANT' | translate }}"
+                                  [practitioner]="getAssistantMedic()"
+                                  (setPractitioner)="setAssistant($event)"
+                                  (remove)="onRemoveAssitant($event)"
+                                  [editable]="editable">
+        </app-practitioner-chooser>
+        <app-practitioner-chooser fieldTitle="{{ 'CAREPROVIDER.ASSOCIATED' | translate }}"
+                                  [practitioner]="getAssociatedMedic()"
+                                  (setPractitioner)="setAssociated($event)"
+                                  (remove)="onRemoveAssociated($event)"
+                                  [editable]="editable">
+        </app-practitioner-chooser>
+        </div>
+        <div class="col-icons">
+          <img src="assets/dia.png" class="icons-day day">
+          <img src="assets/tarde.png" class="icons-day afternoon">
+          <img src="assets/noite.png" class="icons-day night">
+        </div>
+
+        <div class="col vertical-display" *ngFor="let role of ['NURSE', 'NURSE_TECH']">
+          <div class="provider-role">
+            {{ 'CAREPROVIDER.' + role | translate }}
+          </div>
+          <app-practitioner-chooser *ngFor="let shift of availableShifts"
+                                    [practitioner]="getShiftPractitioner(shift, getRoleCode(role))"
+                                    (setPractitioner)="setShiftPractitioner($event, shift)"
+                                    (remove)="onRemoveShiftPractitioner($event, shift)"
+                                    [editable]="editable && (appointmentsBackup == null)"
+                                    [role]="getRoleCode(role)">
+          </app-practitioner-chooser>
+        </div>
+      <div class="loading-overlay" *ngIf="loading || cardIsLoading">
         <smart-loading></smart-loading>
       </div>
     </div>
     <div *ngIf="error">
       <div class="error">
-          {{ 'CAREPROVIDER.CARD_ERROR' | translate }}
+        {{ 'CAREPROVIDER.CARD_ERROR' | translate }}
       </div>
     </div>
   </div>
