--- a/src/app/modules/patient/patient.component.css
+++ b/src/app/modules/patient/patient.component.css
@@ -4,8 +4,14 @@
 }
 
 .patients div{
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
   display: flex;
+  -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
+  -webkit-justify-content: center; /* Safari 6.1+ */
   justify-content: center;
 }
 
@@ -44,7 +50,12 @@
 }
 
 .field-group {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
   display: flex;
+  -webkit-flex-flow: row nowrap;
   flex-flow: row nowrap;
   padding-top: 29px;
   padding-left: 20px;
