--- a/src/app/modules/practitioner/practitioner.component.css
+++ b/src/app/modules/practitioner/practitioner.component.css
@@ -3,8 +3,14 @@
 }
 
 .practitioners div{
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
   display: flex;
+  -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
+  -webkit-justify-content: center; /* Safari 6.1+ */
   justify-content: center;
 }
 
@@ -21,6 +27,10 @@
 
 .edit{
   background-image: url('/assets/edit.png');
+}
+
+.remove{
+  background-image: url('/assets/remove.png');
 }
 
 .btn{
@@ -40,4 +50,69 @@
 
 .loadMore {
   text-align: center;
+}
+
+.button-group{
+  text-align: center;
+}
+
+.button-group .btn{
+  width: 100px;
+  margin-right: 12px;
+  text-transform: uppercase;
+  padding: 12px;
+  font-weight: bold;
+  font-size: 16px;
+  background-color: #fff;
+  border: 1px solid #da9d8c;
+  color: #da9d8c;
+}
+
+.button-group .btn.btn-primary{
+  padding: 12px 33px;
+  background-color: #da9d8c;
+  color: #fff;
+}
+
+h3 {
+  text-align: center;
+  line-height: 35px;
+}
+
+.field-group {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  padding-top: 29px;
+  padding-left: 20px;
+}
+
+.field {
+  padding: 6px;
+}
+
+.field-label {
+  font-weight: bold;
+  font-size: 13px;
+  color: #635953;
+}
+
+.bar-divider {
+  height: 20px;
+  width: 100%;
+  background: #7d746d;
+}
+
+.evaluation {
+  height: 150px;
+  background-color: #c8c1bb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 17px;
+  cursor: pointer;
 }
