--- a/src/app/modules/app-content/app-content.component.html
+++ b/src/app/modules/app-content/app-content.component.html
@@ -36,6 +36,7 @@
     <smart-menu style="display: inline-block; margin-top: -17px;">
       <smart-menu-item href="{{getSmartPath()}}">{{'MENU.SMART' | translate}}</smart-menu-item>
       <smart-menu-item href="{{getCarePlanPath()}}">{{'MENU.CARE_PLAN' | translate}}</smart-menu-item>
+      <smart-menu-item href="{{getSchedulePath()}}">{{'MENU.SCHEDULE' | translate}}</smart-menu-item>
       <smart-menu-item [active]="true">{{'MENU.IDENTIFICATION' | translate}}</smart-menu-item>
     </smart-menu>
   </div>
