--- a/src/app/modules/ratings/ratings.component.css
+++ b/src/app/modules/ratings/ratings.component.css
@@ -10,3 +10,9 @@ th, td {
 }
 
 tr:hover {background-color:#f5f5f5;}
+
+div {
+  display: flex;
+  justify-content: center;
+  align-itens: center;
+}
